APIs/googleapis.com/cloudfunctions/v2/java-client/README.md
# openapi-java-client

Cloud Functions API
- API version: v2
  - Build date: 2024-10-12T11:45:52.976289-04:00[America/New_York]
  - Generator version: 7.9.0

Manages lightweight user-provided functions executed in response to events.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v2</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v2"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v2.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.ProjectsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://cloudfunctions.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    ProjectsApi apiInstance = new ProjectsApi(defaultClient);
    String name = "name_example"; // String | Required. The name of the function for which upgrade should be aborted.
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    Object body = null; // Object | 
    try {
      Operation result = apiInstance.cloudfunctionsProjectsLocationsFunctionsAbortFunctionUpgrade(name, $xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, body);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling ProjectsApi#cloudfunctionsProjectsLocationsFunctionsAbortFunctionUpgrade");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudfunctions.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsAbortFunctionUpgrade**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsAbortFunctionUpgrade) | **POST** /v2/{name}:abortFunctionUpgrade | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsCommitFunctionUpgrade**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsCommitFunctionUpgrade) | **POST** /v2/{name}:commitFunctionUpgrade | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsCreate**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsCreate) | **POST** /v2/{parent}/functions | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsDelete**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsDelete) | **DELETE** /v2/{name} | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsGenerateDownloadUrl**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsGenerateDownloadUrl) | **POST** /v2/{name}:generateDownloadUrl | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsGenerateUploadUrl**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsGenerateUploadUrl) | **POST** /v2/{parent}/functions:generateUploadUrl | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsGetIamPolicy**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsGetIamPolicy) | **GET** /v2/{resource}:getIamPolicy | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsList**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsList) | **GET** /v2/{parent}/functions | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsPatch**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsPatch) | **PATCH** /v2/{name} | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsRedirectFunctionUpgradeTraffic**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsRedirectFunctionUpgradeTraffic) | **POST** /v2/{name}:redirectFunctionUpgradeTraffic | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsRollbackFunctionUpgradeTraffic**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsRollbackFunctionUpgradeTraffic) | **POST** /v2/{name}:rollbackFunctionUpgradeTraffic | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsSetIamPolicy**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsSetIamPolicy) | **POST** /v2/{resource}:setIamPolicy | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsSetupFunctionUpgradeConfig**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsSetupFunctionUpgradeConfig) | **POST** /v2/{name}:setupFunctionUpgradeConfig | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsTestIamPermissions**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsTestIamPermissions) | **POST** /v2/{resource}:testIamPermissions | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsList**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsList) | **GET** /v2/{name}/locations | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsOperationsGet**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsOperationsGet) | **GET** /v2/{name} | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsOperationsList**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsOperationsList) | **GET** /v2/{name}/operations | 
*ProjectsApi* | [**cloudfunctionsProjectsLocationsRuntimesList**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsRuntimesList) | **GET** /v2/{parent}/runtimes | 


## Documentation for Models

 - [AuditConfig](docs/AuditConfig.md)
 - [AuditLogConfig](docs/AuditLogConfig.md)
 - [Binding](docs/Binding.md)
 - [BuildConfig](docs/BuildConfig.md)
 - [Date](docs/Date.md)
 - [EventFilter](docs/EventFilter.md)
 - [EventTrigger](docs/EventTrigger.md)
 - [Expr](docs/Expr.md)
 - [Function](docs/Function.md)
 - [GenerateDownloadUrlResponse](docs/GenerateDownloadUrlResponse.md)
 - [GenerateUploadUrlRequest](docs/GenerateUploadUrlRequest.md)
 - [GenerateUploadUrlResponse](docs/GenerateUploadUrlResponse.md)
 - [GoogleCloudFunctionsV2LocationMetadata](docs/GoogleCloudFunctionsV2LocationMetadata.md)
 - [GoogleCloudFunctionsV2OperationMetadata](docs/GoogleCloudFunctionsV2OperationMetadata.md)
 - [GoogleCloudFunctionsV2Stage](docs/GoogleCloudFunctionsV2Stage.md)
 - [GoogleCloudFunctionsV2StateMessage](docs/GoogleCloudFunctionsV2StateMessage.md)
 - [GoogleCloudFunctionsV2alphaLocationMetadata](docs/GoogleCloudFunctionsV2alphaLocationMetadata.md)
 - [GoogleCloudFunctionsV2alphaOperationMetadata](docs/GoogleCloudFunctionsV2alphaOperationMetadata.md)
 - [GoogleCloudFunctionsV2alphaStage](docs/GoogleCloudFunctionsV2alphaStage.md)
 - [GoogleCloudFunctionsV2alphaStateMessage](docs/GoogleCloudFunctionsV2alphaStateMessage.md)
 - [GoogleCloudFunctionsV2betaLocationMetadata](docs/GoogleCloudFunctionsV2betaLocationMetadata.md)
 - [GoogleCloudFunctionsV2betaOperationMetadata](docs/GoogleCloudFunctionsV2betaOperationMetadata.md)
 - [GoogleCloudFunctionsV2betaStage](docs/GoogleCloudFunctionsV2betaStage.md)
 - [GoogleCloudFunctionsV2betaStateMessage](docs/GoogleCloudFunctionsV2betaStateMessage.md)
 - [ListFunctionsResponse](docs/ListFunctionsResponse.md)
 - [ListLocationsResponse](docs/ListLocationsResponse.md)
 - [ListOperationsResponse](docs/ListOperationsResponse.md)
 - [ListRuntimesResponse](docs/ListRuntimesResponse.md)
 - [Location](docs/Location.md)
 - [OnDeployUpdatePolicy](docs/OnDeployUpdatePolicy.md)
 - [Operation](docs/Operation.md)
 - [OperationMetadataV1](docs/OperationMetadataV1.md)
 - [Policy](docs/Policy.md)
 - [RepoSource](docs/RepoSource.md)
 - [Runtime](docs/Runtime.md)
 - [SecretEnvVar](docs/SecretEnvVar.md)
 - [SecretVersion](docs/SecretVersion.md)
 - [SecretVolume](docs/SecretVolume.md)
 - [ServiceConfig](docs/ServiceConfig.md)
 - [SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [Source](docs/Source.md)
 - [SourceProvenance](docs/SourceProvenance.md)
 - [Status](docs/Status.md)
 - [StorageSource](docs/StorageSource.md)
 - [TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)
 - [UpgradeInfo](docs/UpgradeInfo.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



